dodanie blog do index

--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@ body {
 <h1>O mnie</h1>
 
 <div itemscope >
-   <img itemprop="image" src="face.jpg" width="225px" height="300px" alt="Darek">
+  <img itemprop="image" src="face.jpg" width="225px" height="300px" alt="Darek">
    <p> Twórcą tej strony jest
 
   <b itemprop="name">Dariusz Czajkowski</b>.
-  Przyjaciele mówią na niego <b itemprop="additionalname">Bobo</b>.</p>
+  Przyjaciele mówią na mnie <b itemprop="additionalname">Bobo</b>.</p>
 
   <p>Możesz się z nim skontaktować osobiście, pod n/w adresem, lub dzwoniac pod numer tel.
   
@@ -38,7 +38,7 @@ body {
 
   </span>
   <a itemprop="url" href="http://www.mm.pl/~decinx">www.mm.pl/~decinx</a><br>
-  <a itemprop="url" href="ZooKeeperForm_Revised.html">formularz</a><br><br>
+  <a itemprop="url" href="blog.html">blog</a><br><br>
   <a itemprop="url" href="formularz.html">formularz_kontakt</a>
 </div>
 
