dodanie wiersza w blogu

--- a/blog.html
+++ b/blog.html
@@ -29,10 +29,8 @@ Komentarz
 
   <p>W dniu dzisiejszym tj. 02.10.2022 r. byłem w lesie na grzybach. Kropił deszcz, ale w lesie było przyjemnie. Nazbierałem kilka podgrzybków, kołpaków i jednego maślaczka.
   
-  </p>
-
-    <br>
-
+  </p><br>
+    <p>Tworzę blog</p><br>
 
     
 </body>
